# tarantool-memcached

./: .gitignore  CMakeLists.txt  Makefile  memc.query.py  memcached.c  memcached.h  memcached.lua  memcached.rl
memcached/: CMakeLists.txt  expirationd.lua  memcached.c  memcached.lua  memcached.rl
test/: CMakeLists.txt
test/memcached/: binary-get.result  binary-get.test.py  bogus-commands.result  bogus-commands.test.py  box.lua  cas.result  cas.test.py  expirations.test.py  flags.result  flags.test.py  flush-all.test.py  getset.test.py  incrdecr.test.py  mclient.py  multiversioning.test.py  noreply.test.py  suite.ini
test/memcached/lua/: expirationd.lua  libmemctnt.dylib  memcached.h  memcached.lua
